--- a/lib-fastscrollrecyclerview/src/main/res/values/attrs.xml
+++ b/lib-fastscrollrecyclerview/src/main/res/values/attrs.xml
@@ -19,5 +19,10 @@
 <resources>
   <declare-styleable name="FastScrollRecyclerView">
     <attr name="fastScrollThumbCurvatureEnabled" format="boolean"/>
+    <attr name="fastScrollThumbActiveColor" format="reference|color"/>
+    <attr name="fastScrollThumbInactiveColor" format="reference|color"/>
+    <attr name="fastScrollTrackColor" format="reference|color"/>
+    <attr name="fastScrollPopupBackgroundColor" format="reference|color"/>
+    <attr name="fastScrollPopupTextColor" format="reference|color"/>
   </declare-styleable>
 </resources>
