--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -12,5 +12,4 @@
     app:fastScrollPopupBackgroundColor="?attr/colorAccent"
     app:fastScrollPopupTextColor="?attr/colorButtonNormal"
     app:fastScrollHideDelay="600"
-    tools:context="com.jaredrummler.fastscrollrecyclerview.sample.MainActivity"
-    tools:showIn="@layout/activity_main"/>
+    tools:context="com.jaredrummler.fastscrollrecyclerview.sample.MainActivity"/>
