--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
   -->
 
 <resources>
-  <color name="colorPrimary">#3F51B5</color>
-  <color name="colorPrimaryDark">#303F9F</color>
+  <color name="colorPrimary">#41a4c4</color>
+  <color name="colorPrimaryDark">#34839C</color>
   <color name="colorAccent">#FF4081</color>
 </resources>
