--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -20,8 +20,9 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.jaredrummler.fastscrollrecyclerview.sample.MainActivity">
   <item
-      android:id="@+id/action_settings"
+      android:id="@+id/action_github"
+      android:icon="@drawable/ic_github_white_24dp"
       android:orderInCategory="100"
-      android:title="@string/action_settings"
-      app:showAsAction="never"/>
+      android:title="@string/action_github"
+      app:showAsAction="always"/>
 </menu>
