--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (C) 2016 Jared Rummler <jared.rummler@gmail.com>
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  ~
+  -->
+
 <com.jaredrummler.fastscrollrecyclerview.FastScrollRecyclerView
     android:id="@+id/recycler"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -6,10 +23,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    app:fastScrollThumbActiveColor="?attr/colorAccent"
-    app:fastScrollThumbInactiveColor="?attr/colorAccent"
+    app:fastScrollHideDelay="600"
     app:fastScrollPopupBackgroundColor="?attr/colorAccent"
     app:fastScrollPopupTextColor="?attr/colorButtonNormal"
-    app:fastScrollHideDelay="600"
+    app:fastScrollThumbActiveColor="?attr/colorAccent"
+    app:fastScrollThumbInactiveColor="?attr/colorAccent"
     tools:context="com.jaredrummler.fastscrollrecyclerview.sample.MainActivity"/>
